2010-06-07  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: dependency resolver should only consider
	highest-priority Tree for each %f that Provides a package

2010-06-03  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: get_source_suffices renamed get_source_suffixes,
	but keep older as wrapper to avoid breaking public interface

2010-06-03  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: List known --format values in 'fink list --help'

2010-06-03  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:  Add OS 10.6.3 as a supported version.

2010-06-03  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Add 'fink list --format=dotty-build', gives
	Depends+BuildDepends of family (cf. --format=dotty that does
	Depends of specific package)

2010-05-10  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fallback try otool64 -L if otool -L fails

2010-05-06  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Validation.pm:  Accept DYLIB_STUB as also being a dylib.

2010-03-16  Max Horn  <max@quendi.de>

	* Checksum.pm: Fix example to talk about "checksum" types/modules,
	instead of "notifier" types/modules

2010-03-16  Max Horn  <max@quendi.de>

	* Fix up indention in several *.pm files

2010-02-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Newline before msg that may be emitted during
	progressbar display

2010-01-09  David Fang  <fangism@users.sourceforge.net>

	* PkgVersion.pm: compiler_wrapper finds %p/bin for ccache-default

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: easier/clearer control of env vars propagated over
	sudo

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* all: update copyright

2009-11-23  Augusto Devegili  <monipol@users.sourceforge.net>

	* Configure.pm: Comsetics
	* PkgVersion.pm: Call $config-param() only once and warn user if
	MaxBuildJobs is not a positive integer

2009-11-21  Augusto Devegili  <monipol@users.sourceforge.net>
